--- a/balloon-frontend/index.html
+++ b/balloon-frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>balloon-frontend</title>
+    <script src="https://kit.fontawesome.com/6ddd12fa46.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
