--- a/balloon-frontend/index.html
+++ b/balloon-frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>balloon-frontend</title>
+    <title>Balloon | On-line Equipment Borrowed System</title>
     <script src="https://kit.fontawesome.com/6ddd12fa46.js" crossorigin="anonymous"></script>
   </head>
   <body>
